--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,30 @@
 version: '3.8'
 services:
+  redis:
+    image: redis:latest
+    container_name: redis-server
+    restart: always
+    ports:
+      - "6379:6379"
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    container_name: redis-ui
+    restart: always
+    depends_on:
+      - redis
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8086:8081"
+
   app1:
     build: .
     container_name: app1
+    depends_on:
+      - redis
+    environment:
+      - REDIS_CONNECTION=redis-server:6379
     hostname: app1
     ports:
       - '8081:8080'
@@ -10,6 +32,10 @@ services:
   app2:
     build: .
     container_name: app2
+    depends_on:
+      - redis
+    environment:
+      - REDIS_CONNECTION=redis-server:6379
     hostname: app2
     ports:
       - '8082:8080'
@@ -17,6 +43,10 @@ services:
   app3:
     build: .
     container_name: app3
+    depends_on:
+      - redis
+    environment:
+      - REDIS_CONNECTION=redis-server:6379
     hostname: app3
     ports:
       - '8083:8080'
