--- a/nginx.conf
+++ b/nginx.conf
@@ -16,12 +16,11 @@ http {
 
         location / {
             proxy_pass http://app_servers;
-            proxy_set_header Host $host:$server_port;
+            proxy_set_header Host $http_host;  # Preserve original host and port
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Support WebSocket connections
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
